# DummyEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  build.sh  cmake-variants.yaml  imgui.ini  platform.cmake  readme.md
CMake/: All.cmake  (+5 more)
Dependencies/: ASSIMP.cmake  Assimp.cmake  CMakeLists.txt  DUMMY_CONCURRENCY.cmake  GLAD.cmake  GLFW.cmake  GLM.cmake  IMGUI.cmake  NFD.cmake  REACTPHYSICS3D.cmake  SDL3.cmake  STB_IMAGE.cmake  TRACY.cmake  YAML.cmake
DummyEditor/: CMakeLists.txt  DummyEngineInclude.h  Editor.cpp  EditorLayer.cpp  EditorLayer.h  Sources.cmake  sources.cmake
DummyEditor/ImGuiUtils/: ImGuiIcons.h  ImGuiManager.cpp  ImGuiManager.h  ImGuiPanel.cpp  ImGuiPanel.h  ImGuiUtils.cpp  ImGuiUtils.h
DummyEditor/Panels/: InspectorPanel.cpp  InspectorPanel.h  MenuBar.cpp  MenuBar.h  ProfilerPanel.cpp  ProfilerPanel.h  RendererPanel.cpp  RendererPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ThemePanel.cpp  ThemePanel.h  ViewportPanel.cpp  ViewportPanel.h
DummyEditor/Scripting/: Compiler.cpp  Compiler.h  EditorScripts.cpp  EditorScripts.h  ScriptManager.cpp  ScriptManager.h
DummyEditor/Scripts/: EditorCameraController.cpp
DummyEngine/: CMakeLists.txt  DummyEngine.h  Sources.cmake  sources.cmake
DummyEngine/Core/Animations/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  Bone.cpp  Bone.h
DummyEngine/Core/Application/: Application.cpp  Application.h  Concurrency.cpp  Concurrency.h  Config.cpp  Config.h  Engine.cpp  Engine.h  EntryPoint.h  Event.h  FileSystem.cpp  FileSystem.h  GLFW.cpp  GLFW.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiPanel.cpp  ImGuiPanel.h  ImGuiPanelStack.cpp  ImGuiPanelStack.h  Initializer.cpp  Initializer.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  Window.cpp  Window.h
DummyEngine/Core/Console/: Console.cpp  Console.hpp  ConsoleLayer.cpp  ConsoleLayer.hpp
DummyEngine/Core/ECS/: ComponentArray.h  ComponentArray.hpp  ComponentManager.h  ComponentManager.hpp  ECS.h  ECSStorage.hpp  Entity.h  Entity.hpp  EntityManager.h  EntityManager.hpp  Forward.h  Signature.h  Storage.h  Storage.hpp  StorageView.h  StorageView.hpp  System.h  System.hpp  SystemManager.h  SystemManager.hpp
DummyEngine/Core/Physics/: ConvexCollider.cpp  ConvexCollider.hpp  ForceQueue.cpp  ForceQueue.hpp  PhysicsComponent.h  SceneConstants.cpp  SceneConstants.hpp  Solver.cpp  Solver.hpp  Utils.cpp  Utils.hpp
DummyEngine/Core/ResourceManaging/: AssetManager.cpp  AssetManager.h  Assets.h  HandleManager.h  RawData.cpp  RawData.h  Resource.cpp  Resource.hpp  ResourceManager.cpp  ResourceManager.h
DummyEngine/Core/Scene/: Components.cpp  Components.h  Scene.cpp  Scene.h  SceneHierarchy.cpp  SceneHierarchy.h  SceneRenderData.cpp  SceneRenderData.h  SceneRenderer.cpp  SceneRenderer.h
DummyEngine/Core/Scripting/: Script.cpp  Script.h  ScriptClass.cpp  ScriptClass.h  ScriptEngine.cpp  ScriptEngine.h  SharedObject.h
DummyEngine/Core/SoundEngine/: AudioContext.cpp  AudioContext.h  AudioEngine.cpp  AudioEngine.h  AudioEngineFacade.cpp  AudioEngineFacade.h  AudioFile.cpp  AudioFile.h  SoundsAndFactories.cpp  SoundsAndFactories.h  WAVLoader.cpp  WAVLoader.h
DummyEngine/Core/Threading/: Executor.cpp  Executor.hpp  Future.hpp  MutexMap.cpp  MutexMap.hpp  Task.cpp  Task.hpp  TimerQueue.cpp  TimerQueue.hpp
DummyEngine/Libs/: CMakeLists.txt
DummyEngine/Platform/: PlatformIncludes.h
DummyEngine/ToolBox/Dev/: Logger.cpp  Profiler.cpp  Profiler.h
DummyEngine/ToolBox/Editors/: TextureEditor.cpp  TextureEditor.h
DummyEngine/ToolBox/Loaders/: ModelLoader.cpp  ModelLoader.h  SceneLoader.cpp  SceneLoader.h  TextureLoader.cpp  TextureLoader.h
DummyEngine/Utils/: Assert.cpp  Assert.h  Base.h  CompilerDefines.h  Config.h  DummyEngine.h  Random.cpp  STDIncludes.h  ScriptIncludes.h  Singleton.h  StackTrace.h  StringOperations.cpp  StringOperations.h  Timer.cpp  UUID.cpp  UUID.h
DummyEngine/Utils/Base/: CompilerSpecific.h  Constants.h  GLMIncludes.h  STDIncludes.h
DummyEngine/Utils/DS/: Trie.cpp  Trie.hpp  UnorderedMap.cpp  UnorderedMap.hpp
DummyEngine/Utils/Debug/: Assert.cpp  Assert.h  Demangler.h  Logger.cpp  Logger.h  Profiler.cpp  Profiler.h  StackTrace.h
DummyEngine/Utils/Helpers/: CompilerSpecific.h  Conversions.cpp  Conversions.h  Random.cpp  Random.h  STDAdapters.h  Singleton.h  StringOperations.cpp  StringOperations.h  Timer.cpp  Timer.h
DummyEngine/Utils/PCH/: DC.h  GLMIncludes.h  PCH.h  STDIncludes.h
DummyEngine/Utils/Types/: Constants.h  STDAdapters.h  Types.cpp  Types.h  UUID.cpp  UUID.h
Examples/: CMakeLists.txt  EmptyApplication.cpp  HelloTriangle.cpp  ImGuiTest.cpp  LoadingScene.cpp  ProperGLFWUsage.cpp  SDL3Test.cpp  Test.cpp  TestASAN.cpp  TestLSAN.cpp  TestMSAN.cpp  TestOpenGLWithFiber.cpp  TestTSAN.cpp  TracyFiber.cpp
src/DummyEditor/: CMakeLists.txt  DummyEngineInclude.h  Editor.cpp  EditorLayer.cpp  EditorLayer.h  sources.cmake
src/DummyEditor/Panels/: InspectorPanel.cpp  InspectorPanel.h  ProfilerPanel.cpp  ProfilerPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewportPanel.cpp  ViewportPanel.h
src/DummyEditor/Scripting/: EditorScripts.h  ScriptManager.cpp  ScriptManager.h
src/DummyEditor/Scripts/: EditorCameraController.cpp
src/DummyEngine/: CMakeLists.txt  sources.cmake
src/DummyEngine/Addition/: Assert.cpp  Assert.h  Base.h  CompileConfig.h  Config.cpp  Config.h  Conversions.cpp  Conversions.h  DummyEngine.h  FileDialogs.cpp  FileDialogs.h  GLDebug.cpp  Random.cpp  STBImplementation.cpp  ScriptIncludes.h  Timer.cpp  Types.h  UUID.cpp  UUID.h  base.h  config.cpp  config.h  const.h  de_lib.h  types.h
src/DummyEngine/Config/: config.h
src/DummyEngine/Libs/: CMakeLists.txt
src/DummyEngine/Platform/: PlatformIncludes.h  PlatformResolver.h  PlatformSpecific.cpp
src/DummyEngine/Utils/: Assert.cpp  Base.h  CompilerDefines.h  Config.cpp  Config.h  Constants.h  Conversions.cpp  Conversions.h  DummyEngine.h  FileDialogs.h  FileSystem.h  GLDebug.cpp  GLDebug.h  GLMIncludes.h  Random.cpp  Random.h  STDIncludes.h  ScriptIncludes.h  Singleton.h  Timer.h  Types.h  UUID.cpp  UUID.h
(+670 files in other folders)
