include(ASSIMP.cmake)
include(GLAD.cmake)
include(GLFW.cmake)
include(GLM.cmake)
include(IMGUI.cmake)
include(NFD.cmake)
include(YAML.cmake)

add_library(Dependencies STBImplementation.cpp)
target_include_directories(Dependencies
    PUBLIC ${EXTERNAL_ASSIMP_INCLUDE_DIR}
    PUBLIC ${EXTERNAL_GLAD_INCLUDE_DIR}
    PUBLIC ${EXTERNAL_GLFW_INCLUDE_DIR}
    PUBLIC ${EXTERNAL_GLM_INCLUDE_DIR}
    PUBLIC ${EXTERNAL_IMGUI_INCLUDE_DIR}
    PUBLIC ${EXTERNAL_NFD_INCLUDE_DIR}
    PUBLIC ${EXTERNAL_YAML_INDCLUDE_DIR}
    PUBLIC STB_IMAGE
)
target_link_libraries(Dependencies
    PUBLIC ${EXTERNAL_ASSIMP_LIBRARY}
    PUBLIC ${EXTERNAL_GLAD_LIBRARY}
    PUBLIC ${EXTERNAL_GLFW_LIBRARY}
    PUBLIC ${EXTERNAL_GLM_LIBRARY}
    PUBLIC ${EXTERNAL_IMGUI_LIBRARY}
    PUBLIC ${EXTERNAL_NFD_LIBRARY}
    PUBLIC ${EXTERNAL_YAML_LIBRARY}
)